objects/LJ_User__c.object
<CustomObject>
    <fields>
        <fullName>Comments_Posted__c</fullName>
        <label>Comments Posted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_Recieved__c</fullName>
        <label>Comments Recieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entries__c</fullName>
        <label>Entries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friend_Added__c</fullName>
        <label>Friend Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friend_Quantity__c</fullName>
        <label>Friend Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friend_Removed__c</fullName>
        <label>Friend Removed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friend_of_Myne__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friend of Myne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friend_of_Quantity__c</fullName>
        <label>Friend of Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_added_to_friends__c</fullName>
        <label>I added to friends</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>I_removed_from_Friends__c</fullName>
        <label>I removed from Friends</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Friend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Friend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <externalId>true</externalId>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Friend_Of__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Friend Of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Friend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Friend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <formula>Friend_Quantity__c &gt; Friend_of_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Score__c</fullName>
        <label>Social Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Livejournal User</label>
    <listViews>
        <fullName>All_Positive</fullName>
        <columns>NAME</columns>
        <columns>Place__c</columns>
        <columns>Nickname__c</columns>
        <columns>Friend_Quantity__c</columns>
        <columns>Friend_of_Quantity__c</columns>
        <columns>Social_Score__c</columns>
        <columns>Friend_of_Myne__c</columns>
        <columns>My_Friend__c</columns>
        <columns>Previous_Friend__c</columns>
        <columns>Previous_Friend_Of__c</columns>
        <columns>Comments_Posted__c</columns>
        <columns>Comments_Recieved__c</columns>
        <columns>Country__c</columns>
        <columns>Entries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Place__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Positive</label>
    </listViews>
    <listViews>
        <fullName>Belarus</fullName>
        <columns>NAME</columns>
        <columns>Place__c</columns>
        <columns>Nickname__c</columns>
        <columns>Tag__c</columns>
        <columns>Friend_Quantity__c</columns>
        <columns>Friend_of_Quantity__c</columns>
        <columns>Social_Score__c</columns>
        <columns>Friend_of_Myne__c</columns>
        <columns>My_Friend__c</columns>
        <columns>Previous_Friend__c</columns>
        <columns>Previous_Friend_Of__c</columns>
        <columns>Comments_Posted__c</columns>
        <columns>Comments_Recieved__c</columns>
        <columns>Country__c</columns>
        <columns>Entries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Place__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Belarus</value>
        </filters>
        <label>Belarus</label>
    </listViews>
    <listViews>
        <fullName>Belarus_potential</fullName>
        <columns>NAME</columns>
        <columns>Place__c</columns>
        <columns>Nickname__c</columns>
        <columns>Tag__c</columns>
        <columns>Friend_Quantity__c</columns>
        <columns>Friend_of_Quantity__c</columns>
        <columns>Social_Score__c</columns>
        <columns>Friend_of_Myne__c</columns>
        <columns>My_Friend__c</columns>
        <columns>Previous_Friend__c</columns>
        <columns>Previous_Friend_Of__c</columns>
        <columns>Comments_Posted__c</columns>
        <columns>Comments_Recieved__c</columns>
        <columns>Country__c</columns>
        <columns>Entries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Place__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Belarus</value>
        </filters>
        <filters>
            <field>Friend_of_Myne__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Previous_Friend__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Belarus potential</label>
    </listViews>
    <nameField>
        <displayFormat>LJU-{000000}</displayFormat>
        <label>LJ User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Livejournal Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>